A ton of bug fixes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content"
             app:titleTextColor="#FFFFFF"
             app:subtitleTextColor="#FFFFFF"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark"
             >
             <android.support.constraint.ConstraintLayout
                 android:layout_width="wrap_content"
