--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -60,12 +60,11 @@
                 android:id="@+id/discard_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_cancel"
+                android:src="@drawable/ic_cancel"
                 app:tint="#000000"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="?selectableItemBackground"
                 android:visibility="gone"
                 android:clickable="true"
                 android:focusable="true"
@@ -74,43 +73,51 @@
                 android:id="@+id/resign_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_flag"
+                android:src="@drawable/ic_flag"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="?selectableItemBackground"
                 />
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/pass_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_pass"
+                android:src="@drawable/ic_pass"
+                app:tint="@color/disable_black"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="?selectableItemBackground"
+                />
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/analyze_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_analyze"
+                app:tint="@color/disable_black"
+                android:layout_weight="1"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 />
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/chat_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_chat_bubble"
+                android:src="@drawable/ic_chat_bubble"
                 app:tint="@color/disable_black"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="?selectableItemBackground"
                 />
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/previous_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_navigate_previous"
+                android:src="@drawable/ic_navigate_previous"
                 app:tint="@color/disable_black"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="?selectableItemBackground"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
                 />
@@ -118,29 +125,27 @@
                 android:id="@+id/next_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_navigate_next"
+                android:src="@drawable/ic_navigate_next"
                 app:tint="@color/disable_black"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="?selectableItemBackground"
                 />
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/auto_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_magic_wand"
+                android:src="@drawable/ic_magic_wand"
                 app:tint="@color/disable_black"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:background="?selectableItemBackground"
                 />
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/confirm_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_done_24dp"
+                android:src="@drawable/ic_done_24dp"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
