--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -60,7 +60,7 @@
                 android:id="@+id/discard_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_cancel"
+                app:srcCompat="@drawable/ic_cancel"
                 app:tint="#000000"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
@@ -73,7 +73,7 @@
                 android:id="@+id/resign_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_flag"
+                app:srcCompat="@drawable/ic_flag"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
@@ -82,7 +82,7 @@
                 android:id="@+id/pass_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_pass"
+                app:srcCompat="@drawable/ic_pass"
                 app:tint="@color/disable_black"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
@@ -92,7 +92,7 @@
                 android:id="@+id/analyze_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_analyze"
+                app:srcCompat="@drawable/ic_analyze"
                 app:tint="@color/disable_black"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
@@ -102,7 +102,7 @@
                 android:id="@+id/chat_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_chat_bubble"
+                app:srcCompat="@drawable/ic_chat_bubble"
                 app:tint="@color/disable_black"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
@@ -112,7 +112,7 @@
                 android:id="@+id/previous_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_navigate_previous"
+                app:srcCompat="@drawable/ic_navigate_previous"
                 app:tint="@color/disable_black"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
@@ -125,7 +125,7 @@
                 android:id="@+id/next_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_navigate_next"
+                app:srcCompat="@drawable/ic_navigate_next"
                 app:tint="@color/disable_black"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
@@ -135,7 +135,7 @@
                 android:id="@+id/auto_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_magic_wand"
+                app:srcCompat="@drawable/ic_magic_wand"
                 app:tint="@color/disable_black"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
@@ -145,7 +145,7 @@
                 android:id="@+id/confirm_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_done_24dp"
+                app:srcCompat="@drawable/ic_done_24dp"
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
