--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,8 @@
                     />
                 <ImageView
                     android:id="@+id/notifications"
-                    app:srcCompat="@drawable/ic_move"
+                    app:srcCompat="@drawable/ic_go_board"
+                    android:tint="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
