--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/kanit</item>
         <item>@font/kanit_semibold</item>
+        <item>@font/kaushan_script</item>
         <item>@font/ubuntu</item>
         <item>@font/ubuntu_bold</item>
         <item>@font/ubuntu_condensed_regular</item>
