--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,11 +21,14 @@
             android:layout_height="0dp"
             android:layout_weight="2"
             />
-        <android.support.v7.widget.AppCompatImageView
+        <TextView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/online_go_prerender"
+            android:fontFamily="@font/kaushan_script"
+            android:textColor="@color/white"
+            android:textSize="50dp"
+            android:text="OnlineGo "
             android:layout_gravity="center_horizontal"
             />
         <Space
