--- a/app/src/main/res/layout/view_player_details.xml
+++ b/app/src/main/res/layout/view_player_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    tools:maxHeight="150dp"
     >
 
     <View
@@ -72,7 +73,7 @@
         android:gravity="right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@id/icon_container"
-        app:layout_constraintRight_toLeftOf="@id/your_turn_label"
+        app:layout_constraintRight_toLeftOf="@id/points_label"
         app:layout_constraintTop_toTopOf="@id/icon_container"
         app:layout_constrainedWidth="true"
         >
@@ -127,9 +128,9 @@
         android:visibility="visible"
         app:layout_goneMarginTop="4dp"
         tools:alpha="1"
-        app:layout_constraintTop_toTopOf="@id/first_row"
-        app:layout_constraintBottom_toBottomOf="@id/first_row"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/first_row"
+        app:layout_constraintTop_toBottomOf="@id/first_row"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginRight="24dp"
         />
 
@@ -151,96 +152,95 @@
         android:visibility="visible"
         app:layout_goneMarginTop="4dp"
         tools:alpha="1"
-        app:layout_constraintTop_toTopOf="@id/first_row"
-        app:layout_constraintBottom_toBottomOf="@id/first_row"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/first_row"
+        app:layout_constraintTop_toBottomOf="@id/first_row"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginRight="24dp"
         />
 
-    <TextView
+    <ImageView
         android:id="@+id/points_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:alpha=".6"
-        android:fontFamily="@font/ubuntu_condensed_regular"
-        android:text="Points"
-        android:textAllCaps="true"
-        android:textColor="@color/colorTextSecondary"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@id/points"
-        app:layout_constraintLeft_toLeftOf="@id/first_row"
-        app:layout_constraintTop_toBottomOf="@id/first_row"
-        app:layout_constraintVertical_bias="1" />
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toLeftOf="@id/values_barrier"
+        app:layout_constraintTop_toTopOf="@id/points"
+        app:layout_constraintBottom_toBottomOf="@id/points"
+        app:srcCompat="@drawable/ic_score" />
 
     <TextView
         android:id="@+id/points"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:fontFamily="@font/ubuntu_medium"
+        android:layout_height="14dp"
         android:textColor="@color/colorTextSecondary"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@id/bottom_guide"
-        app:layout_constraintLeft_toLeftOf="@id/points_label"
-        app:layout_constraintVertical_weight="1"
-        tools:text="5.5"
-        />
+        android:layout_marginRight="12dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/main_time"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:text="5.5" />
 
 
     <TextView
         android:id="@+id/extra_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/ubuntu_medium"
         android:textColor="@color/colorTextSecondary"
         android:textSize="12sp"
-        app:layout_constraintTop_toTopOf="@id/points"
-        app:layout_constraintBottom_toBottomOf="@id/points"
-        app:layout_constraintLeft_toLeftOf="@id/extra_time_label"
-        tools:text="1 day" />
-
-    <TextView
-        android:id="@+id/extra_time_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="30dp"
-        android:alpha=".6"
-        android:fontFamily="@font/ubuntu_condensed_regular"
-        android:text="Extra Time"
-        android:textAllCaps="true"
-        android:textColor="@color/colorTextSecondary"
-        android:textSize="10sp"
-        app:layout_constraintTop_toTopOf="@id/points_label"
-        app:layout_constraintBottom_toBottomOf="@id/points_label"
+        android:layout_marginRight="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_time"
         app:layout_constraintRight_toRightOf="parent"
+        tools:text="1 day"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+
+    <ImageView
+        android:id="@+id/extra_time_label"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        app:srcCompat="@drawable/ic_stopwatch_add"
+        app:layout_constraintRight_toLeftOf="@id/values_barrier"
+        app:layout_constraintTop_toTopOf="@id/extra_time"
+        app:layout_constraintBottom_toBottomOf="@id/extra_time"
+        android:layout_marginRight="8dp"
+
         />
 
     <TextView
         android:id="@+id/main_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/ubuntu_medium"
         android:textColor="@color/colorTextSecondary"
         android:textSize="12sp"
-        app:layout_constraintTop_toTopOf="@id/points"
-        app:layout_constraintBottom_toBottomOf="@id/points"
-        app:layout_constraintLeft_toLeftOf="@id/main_time_label"
-        tools:text="1 day" />
-
-    <TextView
-        android:id="@+id/main_time_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="30dp"
-        android:alpha=".6"
-        android:fontFamily="@font/ubuntu_condensed_regular"
-        android:text="Main Time"
-        android:textAllCaps="true"
-        android:textColor="@color/colorTextSecondary"
-        android:textSize="10sp"
-        app:layout_constraintTop_toTopOf="@id/points_label"
-        app:layout_constraintBottom_toBottomOf="@id/points_label"
+        android:layout_marginRight="12dp"
+        app:layout_constraintBottom_toTopOf="@id/extra_time"
+        app:layout_constraintTop_toBottomOf="@+id/points"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/points_label"
+        tools:text="1 day"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+
+    <ImageView
+        android:id="@+id/main_time_label"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        app:srcCompat="@drawable/ic_stopwatch"
+        android:fontFamily="@font/ubuntu_condensed_regular"
+        app:layout_constraintRight_toLeftOf="@id/values_barrier"
+        app:layout_constraintTop_toTopOf="@id/main_time"
+        app:layout_constraintBottom_toBottomOf="@id/main_time"
+        android:layout_marginRight="8dp"
+        />
+
+    <android.support.constraint.Barrier
+        android:id="@+id/values_barrier"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:barrierDirection="left"
+        app:constraint_referenced_ids="points,main_time,extra_time"
         />
 
 </android.support.constraint.ConstraintLayout>
