--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,8 +51,21 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/title"
                     app:layout_constraintLeft_toLeftOf="@id/title"
-                    app:layout_constraintRight_toLeftOf="@id/notifications"
+                    app:layout_constraintRight_toLeftOf="@id/chat"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    />
+                <ImageView
+                    android:id="@+id/chat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_chat_bubble"
+                    app:layout_constraintRight_toLeftOf="@id/notifications"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:scaleType="fitXY"
+                    android:padding="10dp"
+                    android:background="?android:selectableItemBackground"
+                    android:tint="@color/white"
                     />
                 <ImageView
                     android:id="@+id/notifications"
