--- a/app/src/main/res/layout/dialog_messages.xml
+++ b/app/src/main/res/layout/dialog_messages.xml
@@ -1,16 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minHeight="1000dp"
-    android:minWidth="1000dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/messagesRecycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:minWidth="1000dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/newMessageWrapper"
+        android:layout_marginBottom="10dp"
         />
-</FrameLayout>
+    <android.support.v7.widget.CardView
+        android:id="@+id/newMessageWrapper"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/sendButton"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="10dp"
+        android:elevation="0dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="20dp"
+        >
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/newMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:hint="Type a message..."
+            />
+    </android.support.v7.widget.CardView>
+    <ImageView
+        android:id="@+id/sendButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="1"
+        app:srcCompat="@drawable/ic_send"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/newMessageWrapper"
+        app:layout_constraintTop_toTopOf="@id/newMessageWrapper"
+        android:padding="3dp"
+        android:layout_marginRight="10dp"
+        />
+</android.support.constraint.ConstraintLayout>
