--- a/app/src/main/res/layout/dialog_messages.xml
+++ b/app/src/main/res/layout/dialog_messages.xml
@@ -3,51 +3,73 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorOffWhite"
     >
+
+    <LinearLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="8dp"
+        android:background="@color/white"
+        android:elevation="2dp"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Game Chat"
+            android:textSize="16sp"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            />
+        <ImageView
+            android:id="@+id/closeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_cancel"
+            android:tint="@color/black"
+            />
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/messagesRecycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/newMessageWrapper"
-        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@id/footer"
         />
-    <android.support.v7.widget.CardView
-        android:id="@+id/newMessageWrapper"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/sendButton"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="10dp"
-        android:elevation="0dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="20dp"
+        android:background="@color/white"
+        android:elevation="10dp"
         >
         <android.support.design.widget.TextInputEditText
             android:id="@+id/newMessage"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:hint="Type a message..."
+            android:layout_weight="1"
+            android:layout_marginBottom="4dp"
+            android:layout_marginTop="4dp"
             />
-    </android.support.v7.widget.CardView>
-    <ImageView
-        android:id="@+id/sendButton"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="1"
-        app:srcCompat="@drawable/ic_send"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/newMessageWrapper"
-        app:layout_constraintTop_toTopOf="@id/newMessageWrapper"
-        android:padding="3dp"
-        android:layout_marginRight="10dp"
-        />
+        <ImageView
+            android:id="@+id/sendButton"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            app:srcCompat="@drawable/ic_send"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="center"
+            />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
