Added privacy policy

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -17,6 +17,10 @@
             android:key="about"
             android:title="About app"
             />
+        <Preference
+            android:key="privacyPolicy"
+            android:title="Privacy Policy"
+            />
     </PreferenceCategory>
 
 </PreferenceScreen>
