--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,12 +42,12 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:theme="@style/LoginLabel"
-            android:id="@+id/input_username_layout"
+            android:id="@+id/usernameLayout"
             android:visibility="gone"
             tools:visibility="visible"
             >
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/input_username"
+                android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
@@ -62,12 +62,12 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:theme="@style/LoginLabel"
-            android:id="@+id/input_password_layout"
+            android:id="@+id/passwordLayout"
             android:visibility="gone"
             tools:visibility="visible"
             >
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/input_password"
+                android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
@@ -84,12 +84,12 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:theme="@style/LoginLabel"
-            android:id="@+id/input_email_layout"
+            android:id="@+id/emailLayout"
             android:visibility="gone"
             tools:visibility="visible"
             >
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/input_email"
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
@@ -99,7 +99,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
-            android:id="@+id/btn_login"
+            android:id="@+id/loginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -117,7 +117,7 @@
             tools:visibility="visible"
             />
         <TextView
-            android:id="@+id/no_account"
+            android:id="@+id/noAccountView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
