--- a/app/src/main/res/layout/fragment_challenges.xml
+++ b/app/src/main/res/layout/fragment_challenges.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ListView
-        android:id="@+id/challenges_recycler"
+        android:id="@+id/challengesRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
