--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -6,7 +6,7 @@
     android:background="@color/white">
 
     <io.zenandroid.onlinego.views.PlayerDetailsView
-        android:id="@+id/black_details"
+        android:id="@+id/blackDetailsView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:elevation="2dp"
@@ -21,7 +21,7 @@
         app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
         app:cardBackgroundColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@id/play_controls"
+        app:layout_constraintBottom_toTopOf="@id/playControls"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toTopOf="parent"
         app:cardPreventCornerOverlap="false"
@@ -34,18 +34,18 @@
     </android.support.v7.widget.CardView>
 
     <io.zenandroid.onlinego.views.PlayerDetailsView
-        android:id="@+id/white_details"
+        android:id="@+id/whiteDetailsView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:elevation="2dp"
         app:layout_constraintTop_toBottomOf="@+id/board_container"
-        app:layout_constraintBottom_toTopOf="@id/play_controls"
+        app:layout_constraintBottom_toTopOf="@id/playControls"
         />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/play_controls"
+        android:id="@+id/playControls"
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="visible"
         app:cardBackgroundColor="@color/white"
@@ -57,7 +57,7 @@
             android:orientation="horizontal"
             >
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/discard_button"
+                android:id="@+id/discardButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_cancel"
@@ -70,7 +70,7 @@
                 android:focusable="true"
                 />
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/resign_button"
+                android:id="@+id/resignButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_flag"
@@ -79,7 +79,7 @@
                 android:paddingBottom="10dp"
                 />
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/pass_button"
+                android:id="@+id/passButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_pass"
@@ -89,7 +89,7 @@
                 android:paddingBottom="10dp"
                 />
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/analyze_button"
+                android:id="@+id/analyzeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_analyze"
@@ -99,7 +99,7 @@
                 android:paddingBottom="10dp"
                 />
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/previous_button"
+                android:id="@+id/previousButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_navigate_previous"
@@ -112,7 +112,7 @@
                 android:focusable="true"
                 />
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/next_button"
+                android:id="@+id/nextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_navigate_next"
@@ -122,7 +122,7 @@
                 android:paddingBottom="10dp"
                 />
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/auto_button"
+                android:id="@+id/autoButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_magic_wand"
@@ -132,7 +132,7 @@
                 android:paddingBottom="10dp"
                 />
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/confirm_button"
+                android:id="@+id/confirmButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_done_24dp"
