--- a/app/src/main/res/layout/fragment_spectate.xml
+++ b/app/src/main/res/layout/fragment_spectate.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/games_recycler"
+        android:id="@+id/gamesRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
