--- a/app/src/main/res/layout/view_player_details.xml
+++ b/app/src/main/res/layout/view_player_details.xml
@@ -24,7 +24,7 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <android.support.v7.widget.CardView
-        android:id="@+id/icon_container"
+        android:id="@+id/iconContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:cardBackgroundColor="@color/white"
@@ -42,7 +42,7 @@
         >
 
         <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/icon"
+            android:id="@+id/iconView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/ic_person_outline"
@@ -72,14 +72,14 @@
         android:layout_marginRight="8dp"
         android:gravity="right"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@id/icon_container"
+        app:layout_constraintLeft_toRightOf="@id/iconContainer"
         app:layout_constraintRight_toLeftOf="@id/points_label"
-        app:layout_constraintTop_toTopOf="@id/icon_container"
+        app:layout_constraintTop_toTopOf="@id/iconContainer"
         app:layout_constrainedWidth="true"
         >
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/nameView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -91,7 +91,7 @@
             tools:text="MrAlex" />
 
         <TextView
-            android:id="@+id/rank"
+            android:id="@+id/rankView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -102,7 +102,7 @@
             tools:text="14k" />
 
         <android.support.text.emoji.widget.EmojiAppCompatTextView
-            android:id="@+id/flag"
+            android:id="@+id/flagView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -112,7 +112,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/your_turn_label"
+        android:id="@+id/theirTurnLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0"
@@ -135,7 +135,7 @@
         />
 
     <TextView
-        android:id="@+id/passed_label"
+        android:id="@+id/passedLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0"
@@ -164,32 +164,32 @@
         android:layout_height="14dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toLeftOf="@id/values_barrier"
-        app:layout_constraintTop_toTopOf="@id/points"
-        app:layout_constraintBottom_toBottomOf="@id/points"
+        app:layout_constraintTop_toTopOf="@id/scoreView"
+        app:layout_constraintBottom_toBottomOf="@id/scoreView"
         app:srcCompat="@drawable/ic_score" />
 
     <TextView
-        android:id="@+id/points"
+        android:id="@+id/scoreView"
         android:layout_width="wrap_content"
         android:layout_height="14dp"
         android:textColor="@color/colorTextSecondary"
         android:textSize="12sp"
         android:layout_marginRight="12dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/main_time"
+        app:layout_constraintBottom_toTopOf="@id/timerFirstLineView"
         app:layout_constraintRight_toRightOf="parent"
         tools:text="5.5" />
 
 
     <TextView
-        android:id="@+id/extra_time"
+        android:id="@+id/timerSecondLineView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorTextSecondary"
         android:textSize="12sp"
         android:layout_marginRight="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_time"
+        app:layout_constraintTop_toBottomOf="@id/timerFirstLineView"
         app:layout_constraintRight_toRightOf="parent"
         tools:text="1 day"
         android:visibility="gone"
@@ -197,27 +197,27 @@
         />
 
     <ImageView
-        android:id="@+id/extra_time_label"
+        android:id="@+id/timerSecondLineLabelView"
         android:layout_width="14dp"
         android:layout_height="14dp"
         app:srcCompat="@drawable/ic_stopwatch_add"
         app:layout_constraintRight_toLeftOf="@id/values_barrier"
-        app:layout_constraintTop_toTopOf="@id/extra_time"
-        app:layout_constraintBottom_toBottomOf="@id/extra_time"
+        app:layout_constraintTop_toTopOf="@id/timerSecondLineView"
+        app:layout_constraintBottom_toBottomOf="@id/timerSecondLineView"
         android:layout_marginRight="8dp"
         android:visibility="gone"
         tools:visibility="visible"
         />
 
     <TextView
-        android:id="@+id/main_time"
+        android:id="@+id/timerFirstLineView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorTextSecondary"
         android:textSize="12sp"
         android:layout_marginRight="12dp"
-        app:layout_constraintBottom_toTopOf="@id/extra_time"
-        app:layout_constraintTop_toBottomOf="@+id/points"
+        app:layout_constraintBottom_toTopOf="@id/timerSecondLineView"
+        app:layout_constraintTop_toBottomOf="@id/scoreView"
         app:layout_constraintRight_toRightOf="parent"
         tools:text="1 day"
         android:visibility="gone"
@@ -225,14 +225,14 @@
         />
 
     <ImageView
-        android:id="@+id/main_time_label"
+        android:id="@+id/timerFirstLineLabelView"
         android:layout_width="14dp"
         android:layout_height="14dp"
         app:srcCompat="@drawable/ic_stopwatch"
         android:fontFamily="@font/ubuntu_condensed_regular"
         app:layout_constraintRight_toLeftOf="@id/values_barrier"
-        app:layout_constraintTop_toTopOf="@id/main_time"
-        app:layout_constraintBottom_toBottomOf="@id/main_time"
+        app:layout_constraintTop_toTopOf="@id/timerFirstLineView"
+        app:layout_constraintBottom_toBottomOf="@id/timerFirstLineView"
         android:layout_marginRight="8dp"
         android:visibility="gone"
         tools:visibility="visible"
@@ -243,7 +243,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:barrierDirection="left"
-        app:constraint_referenced_ids="points,main_time,extra_time"
+        app:constraint_referenced_ids="scoreView,timerFirstLineView,timerSecondLineView"
         />
 
 </android.support.constraint.ConstraintLayout>
