Implement new login system

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -116,6 +116,29 @@
             android:visibility="gone"
             tools:visibility="visible"
             />
+
+        <Button
+            android:id="@+id/googleSignInButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Google Sign-in"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:background="@drawable/button_shape_default_rounded"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/colorPrimary"
+            />
+        <Button
+            android:id="@+id/facebookSignInButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Facebook Sign-in"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:background="@drawable/button_shape_default_rounded"
+            android:layout_marginTop="4dp"
+            android:textColor="@color/colorPrimary"
+            />
         <TextView
             android:id="@+id/noAccountView"
             android:layout_width="wrap_content"
